css/skeleton.css
/* ==============================*/
/* skeleton.css - Structure Only */
/* ==============================*/

.page {
    max-width: 1100px;
    margin: 0 auto;
    padding: 2rem;
}

nav {
    display: flex;
    align-items: center;
    justify-content: space-between;

    background-color: var(--card-bg);
    border-bottom: 1px solid var(--border);

    padding: 10px 20px;
}
nav a {
    color: var(--text-main);
    text-decoration: none;
    margin-right: 20px;
    padding: 8px 12px;
}
nav a:hover {
    background-color: var(--hover-bg);
    color: var(--text-main);
}

body {
    background: var(--bg-gradient);
    color: var(--text-main);
}

.card {
    background: var(--card-bg);
    border-radius: 16px;
    padding: 1.5rem;
    border: 1px solid var(--border);
    box-shadow: 0 4px 12px var(--shadow-sm);
}
.icon {
    width: 18px;
    height: 18px;
}

footer {
    text-align: center;
    margin: auto;
}

/* ==============================*/
/* Section - Home Page           */
/* ==============================*/

.home-page {
    padding: 2rem;
}
.home-container {
    max-width: 900px;
    margin: 0 auto;
    height: 80vh;

    display: flex;
    align-items: center;
    justify-content: center;
}
.home-card {
    text-align: center;
    padding: 2rem;
    position: relative;

    background: var(--card-bg);
    border-radius: 16px;

    box-shadow: 0 6px 20px var(--shadow-md);
}

.home-title {
    font-size: 2.5rem;
    margin-bottom: 0.5rem;
    color: va(--accent);
}
.home-title span {
    color: var(--text-main);
}
.home-roles {
    font-size: 1.2rem;
    color: var(--text-main);
    margin-bottom: 1rem;
}
.home-description {
    color: var(--text-main);
    margin-bottom: 1.5rem;
}

.home-actions {
    display: flex;
    justify-content: center;
    gap: 1rem;
    flex-wrap: wrap;
}
.btn.primary {
    background: var(--card-secondary);
    text-decoration: none;
    color: var(--text-main);
    padding: .25rem;
    border-radius: 5px;
}


/* ==============================*/
/* Section - About Page          */
/* ==============================*/
.about-page {
    padding: 2rem;
}
.about-container {
    max-width: 1000px;
    margin: 0 auto;
}

.about-main {
    margin-bottom: 2rem;
    text-align: center;
}
.about-main h1 {
    margin-bottom: 0.75rem;
}
.about-main p {
    color: var(--text-main);
    margin-bottom: 0.75rem;
}

.history-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: 1.5rem;
    margin-bottom: 2rem;
}
.history-card {
    padding: 1.25rem;
}

.history-item h3 {
    margin-bottom: 0.25rem;
}
.history-item p {
    font-size: 0.9rem;
}

.history-sub {
    display: block;
    font-size: 0.9rem;
    color: var(--text-main)
}
.history-time {
    display: block;
    font-size: 0.8rem;
    margin-bottom: 0.5rem;
    color: #999
}

.work-grid {
    display: flex;
    justify-content: center;
    gap: 2rem;
    flex-wrap: wrap;
}

.work-pill {
    background: var(--card-third);
    padding: 1rem 1.5rem;
    border-radius: 12px;
    text-align: center;

    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
}
.work-pill h3 {
    font-size: 1.5rem;
    margin-bottom: 0.25rem;
}
.work-pill p {
    font-size: 0.85rem;
}


/* ==============================*/
/* Section - Project Page        */
/* ==============================*/
.projects-page {
    padding: 2rem;
}

.projects-container {
    max-width: 1100px;
    margin: 0 auto;
}

.projects-intro {
    margin-bottom: 2rem;
    text-align: center;
}

.project-filter {
    display: flex;
    gap: 0.75rem;
    margin: 2rem 0;
    flex-wrap: wrap;
}

.filter-btn {
    padding: 0.5rem 1rem;
    border-radius: 999px;
    border: none;
    background: var(--card-secondary);
    color: var(--text-main);
    cursor: pointer;
    transition: 0.2s ease;
}

.filter-btn:hover {
    background: var(--hover-bg);
}

.filter-btn.active {
    background: var(--text-main);
    color: var(--card-bg);
}
.project-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
    gap: 1.5rem;
}

.project-card {
    display: flex; /*Prevents Element stretch*/
    flex-direction: column;

    max-width: 320px; /*Controls Width*/
    width: 100%;

    text-decoration: none; /*Removes Underlines*/
    border-radius: 16px;
    overflow: hidden;

    color: inherit;
    background: var(--card-bg);
    box-shadow: 0 4px 12px var(--shadow-md);
    transition: transform 0.2s ease, box-shadow 0.2s ease;
}

.project-card:hover {
    transform: translateY(-5px);
    box-shadow: 0 8px 25px var(99, 102, 241, 0.15);
}

.project-image img {
    width: 100%;
    height: 160px;
    object-fit: cover;
}

.project-content {
    padding: 1rem;
}

.project-title {
    margin-bottom: 0.5rem;
}

.project-description {
    font-size: 0.9rem;
    color: var(--text-muted);
    margin-bottom: 1rem;
}

.project-meta {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    gap: 0.5rem;
}

.project-type {
    font-size: 0.75rem;
    background: var(--card-secondary);
    padding: 0.25rem 0.5rem;
    border-radius: 6px;
}

.project-tech span {
    font-size: 0.75rem;
    background: var(--hover-bg);
    padding: 0.25rem 0.5rem;
    border-radius: 6px;
}

.project-columns {
    display: flex;
    gap: 2rem;
    flex-wrap: wrap;
}
.project-left {
    flex: 2;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}
.project-right {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.project-main {
    margin-bottom: 2rem;
    text-align: center;
}

.project-second {
    padding: 1rem;
    background: var(--card-bg);
    border-radius: 16px;
    box-shadow: 0 4px 12px var(--shadow-md);
    text-align: left;
}

@media (max-width: 768px){
    .project-columns{
        flex-direction: column;
    }
    .project-left, .project-right{
        flex: 1 1 100%;
    }
}

/* ==============================*/
/* Section - Skills Page         */
/* ==============================*/
.skills-page {
    padding: 2rem;
}

.skills-container {
    max-width: 1100px;
    margin: 0 auto; /*Centers Horizontally*/
}

.skills-info {
    max-width: 700px;
    margin: 0 auto 2rem auto;
    text-align: center;
}

.skills-legend {
    display: flex;
    justify-content: center;
    gap: 0.75rem;
    margin-top: 1rem;
    flex-wrap: wrap;
}

.skills-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(260px, 320px));
    gap: 1.75rem;
    justify-content: center; /*prevents stretching*/
    margin-top: 2rem;
}

.skills-card {
    background: var(--card-bg);
    padding: 1.25rem;
    border-radius: 12px;
    box-shadow: 0 4px 10px var(--shadow-md);
    
    display: flex;
    flex-direction: column;

    min-height: 180px; /*Keeps cards consistent in height*/
    
}

.skills-card:hover {
    transform: translateY(-4px);
    box-shadow: 0 6px 18px var(--shadow-sm);
}

.skills-card h3{
    margin-bottom: 0.75rem;
    font-size: 1.15rem;
}

.skills-card ul {
    list-style: disc;
    padding-left: 1.25rem;
}

.skills-card li {
    display: flex;
    margin-bottom: 0.5rem;
    
}

.skill-row {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.skill-name {
    font-weight: 600;
}

.skill-level{
    padding: 0.2rem 0.6rem;
    border-radius: 6px;
    font-size: 0.8rem;
    font-weight: 500;
}

.skill-level.Core {
  background: #4caf50;
  color: white;
}

.skill-level.Working-Knowledge {
  background: #ff9800;
  color: white;
}

.skill-level.Familiar {
  background: #2196f3;
  color: white;
}




/* ==============================*/
/* Section - Contact Page        */
/* ==============================*/

.contact-page {
    padding: 2rem;
}

.contact-container{
    max-width: 900px;
    margin: 0 auto;
}

.contact-header {
    text-align: center;
    margin-bottom: 2rem;
}
.contact-header h1 {
    margin-bottom: 0.5rem;
}
.contact-header p {
    color: var(--text-muted);
}

.contact-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
    gap: 1rem;
    margin-bottom: 2rem;
}

.contact-pill {
    display: block;
    color: var(--text-muted);

    background: var(--card-third);
    padding: 1rem;
    border-radius: 12px;

    box-shadow: 0 4px 10px var(--shadow-sm);
    transition: 0.2s ease;
}

.contact-pill:hover {
    transform: translateY(-4px);
    box-shadow: 0 6px 18px var(--shadow-md);
}

.contact-pill span {
    font-size: 0.8rem;
}

.contact-pill p {
    font-weight: 600;
    margin-top: 0.25rem;
}

.contact-main {
    margin-bottom: 2rem;
    text-align: center;
}
.contact-main h2 {
    margin-bottom: 0.75rem;
}
.contact-main p {
    color: var(--text-muted);
    margin-bottom: 0.75rem;
}

.status-banner {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;

    margin-top: 2rem;
    padding: 0.75rem 1rem;

    border-radius: 10px;
    font-weight: 500;
}
.status-banner.available {
    background: #e8eff5;
    color: #2e407d;
}
.status-banner.available .status-dot{
    background: #3a2e7d;
}
.status-banner.unavailable {
    background: #fdecea;
    color: #c62828;
}
.status-banner.unavailable .status-dot {
    background: #c62828;
}


.status-dot {
    width: 10px;
    height: 10px;
    border-radius: 50%;
}

